working on Sign Up form fields and general text layout.. still need to figure out best patterns for stopping text breaking out of container divs..

--- a/FormSite_1/css/Index.css
+++ b/FormSite_1/css/Index.css
@@ -4,8 +4,7 @@
 html, body{
     padding: 0;
     margin: 0;
-   height: 100%;
-   
+ 
 }
 
 body{
@@ -25,12 +24,13 @@ p{
     margin-right: 15%;
     background-color: #5C92BC;
     white-space: nowrap;
-     
+    
 }
 
 header{
     margin: 0px auto;
     background-color: #5C92BC;
+    width: 100%;
 }
 
 header #header-image{
@@ -51,6 +51,7 @@ header #header-text h1{
     text-shadow: 0.5px 1px black;
     letter-spacing: 2px;
     width: 80%;
+  
 }
 
 #mainContent{
@@ -102,11 +103,9 @@ header #header-text h1{
 
 .leftPoints{
     list-style-type: none;   
-    margin: 0;   
-    /* padding-bottom: 10%; */
+    margin: 0;      
     border-bottom: 1px solid #F9F9F9;
-    min-height: 100%;
-    /* padding-top: 10%; */
+    min-height: 100%;   
     padding-left: 0;
     padding-right: 0;
     margin-left: 0;
@@ -136,10 +135,67 @@ header #header-text h1{
     border-radius: 15px;
     padding: 5%;
     min-height: 500px;  
+    font-family: 'Raleway', sans-serif;
+}
+
+
+#formHead h3{
+    font-size: 1.8em;
+    color: #F9F9F9;
+    text-shadow: 0.5px 1px black;
+    padding: 0;
+    margin: 0;
+    transform:translateX(25%);
 }
 
 .registerInputFields{
+   height: 50px;
+   width: 90%;
+   background-color: #5C92BC;
+   border-color:  #5C92BC;
+   border: none;
    
+   border-bottom: 1px solid #F9F9F9;
+   display: block;
+   margin: 0 auto;
+
+   position:relative;
+   z-index:1;
+  
+  padding-left:20px;
+  font-family: 'Raleway', sans-serif;
+  text-transform:uppercase;
+  color: #F9F9F9;
+  
+  -webkit-transition:.5s;
+  transition:.5s;
+  
+}
+
+.registerInputFields:focus{
+    outline: none;
+}
+
+.registerInputFields:focus::placeholder{
+    outline:none;
+    position:relative;
+    -webkit-transform:translateY(-40px);
+    transform:translateY(-40px);
+}
+
+.registerInputFields::placeholder{
+    color: #f9f9f9;
+    -webkit-transform:translateY(0px);
+    transform:translateY(0px);
+    -webkit-transition:.5s;
+    transition:.5s;
+}
+
+
+.FormLabels{
+    font-family: 'Raleway', sans-serif;
+    color: #F9F9F9;    
+    padding: 5px;
 }
 
 /* footer styling */
